修正照片和分类排序问题，文件夹分类新增“全部”分类

--- a/albumselector/src/main/res/layout/item_album_list.xml
+++ b/albumselector/src/main/res/layout/item_album_list.xml
@@ -9,6 +9,4 @@
     android:paddingStart="15dp"
     android:text="fdsafsd"
     android:textColor="@color/titleColor"
-    android:textSize="15sp">
-
-</TextView>
+    android:textSize="15sp"/>
