--- a/albumselector/src/main/res/layout/activity_album.xml
+++ b/albumselector/src/main/res/layout/activity_album.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableRight="@drawable/ic_arrow_drop_down_white_24dp"
-            android:text="标题"
+            android:text="相册"
             android:textColor="@color/titleTextColor"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
