--- a/albumselector/src/main/res/layout/activity_album.xml
+++ b/albumselector/src/main/res/layout/activity_album.xml
@@ -73,6 +73,7 @@
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:overScrollMode="never"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
